# pact-python

./: Makefile  pyproject.toml
