[tool.poetry]
name = "pact"
version = "0.1.0"
description = "Pact Python dependencies"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = ">=2.0.0"
coverage = "5.4"
Flask = "1.1.4"
configparser = "3.5.0"
flake8 = "3.8.3"
mock = "3.0.5"
psutil = "5.7.0"
pycodestyle = "2.6.0"
pydocstyle = "4.0.1"
tox = "3.14.0"
pytest = "5.4.1"
pytest-cov = "2.11.1"
requests = ">=2.26.0"
tox-travis = "0.8"
urllib3 = ">=1.26.5"
wheel = "0.24.0"
MarkupSafe = "2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
